<resources>
    <string name="app_name">Huerto en Casa</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_registrer">Registrarse</string>
    <string name="new_account">Nueva Cuenta</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este correo no es válido</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Nueva cuenta</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="instruccion_crar_cultivo">
        Especifíque los parámetros de su huerto:
    </string>
    <string name="cultivo_largo">Largo</string>
    <string name="cultivo_ancho">Ancho</string>
    <string name="cultivo_profundidad">Profundidad</string>
    <string name="cultivo_suelo">Tipo de suelo:</string>
</resources>
