<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.alink.huerto.CrearCultivoActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruccion_crar_cultivo"
        android:textSize="18sp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txt_cultivo_largo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cultivo_largo"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txt_cultivo_ancho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cultivo_ancho"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txt_cultivo_profundidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cultivo_profundidad"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="18px"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cultivo_suelo"
        />
    <Spinner
        android:layout_marginTop="10px"
        android:id="@+id/cultivo_tipo_suelo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="18px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        android:onClick="guardarCultivo"
        />

</LinearLayout>
